--- a/views/ranking.html
+++ b/views/ranking.html
@@ -5,26 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ránking de matriculaciones</title>
 
-    <!-- Styles -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <link href="ranking.css" rel="stylesheet">
-
-    
-    
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels" defer></script>
-    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js" defer></script>
-    <script src="./ranking.js" type="module" defer></script>
+    <script src="ranking.js" type="module" defer></script>
 </head>
 <body>
 
@@ -57,10 +39,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
-    
+</body>
 </html>
