Se termina la pantalla de annuals y se arreglan problemas de rendimiento.

--- a/views/ranking.html
+++ b/views/ranking.html
@@ -18,16 +18,15 @@
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h5>Top matriculaciones por Marcas</h5>
-                    <div class="chart-container">
+                    <div class="chart-container-large">
                         <canvas id="topBrands"></canvas>
                     </div>
                 </div>
-                
             </div>
             <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
-                    <h5>Top matriculaciones por Tipos</h5>
-                    <div class="chart-container">
+                    <h5>Top matriculaciones por Modelos</h5>
+                    <div class="chart-container-large">
                         <canvas id="topModels"></canvas>
                     </div>
                 </div>
