--- a/views/annuals.html
+++ b/views/annuals.html
@@ -9,34 +9,24 @@
     <script src="./annuals.js" type="module" defer></script>
 </head>
 </body>
-<div>
-    <h3 class="text-center">Comparaciones anuales</h3>
-    
-    <div class="row mt-2">
-        <div class="col-12 col-lg-6 text-center">
-            <div class="tarjet">
-                <h5>Top matriculaciones por Marcas</h5>
-                <div class="chart-container">
-                    <canvas id="topBrands2"></canvas>
+    <div>
+        <h3 class="text-center">Comparaciones anuales</h3>
+        
+        <div class="row mt-2">
+            <div class="col-12 col-lg-12 text-center">
+                <div class="tarjet">
+                    <h5>Matriculaciones por Año</h5>
+                    <div class="chart-container-medium">
+                        <canvas id="annuals"></canvas>
+                    </div>
                 </div>
             </div>
-            
-        </div>
-        <div class="col-12 col-lg-6 text-center">
-            <div class="tarjet">
-                <h5>Top matriculaciones por Tipos</h5>
-                <div class="chart-container">
-                    <canvas id="topModels2"></canvas>
+            <div class="col-12">
+                <div class="grid">
+                    <div id="annualsResults"></div>
                 </div>
-            </div>
-        </div>
-
-        <div class="col-12">
-            <div class="grid">
-                <div id="topResults2"></div>
             </div>
         </div>
     </div>
-</div>
 </body>
 </html>
