--- a/views/styles.css
+++ b/views/styles.css
@@ -1,12 +1,3 @@
-:root {
-    --COLOR-PRIMARY: #F1EFEC;
-    --COLOR-SECONDARY: #D4C9BE;
-    --COLOR-ACCENT: #123458;
-    --COLOR-ACCENT-DARK: #030303;
-    --COLOR-SEPARATOR: #d8d7d4;
-    --BORDER-RADIUS: 4px;
-}
-
 body {
     font-family: "Quicksand", sans-serif;
     color: var(--COLOR-ACCENT-DARK);
@@ -25,10 +16,33 @@ body {
     margin-bottom: 10px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
-.chart-container{
+
+.chart-container-small{
+    height: 200px;
+}
+.chart-container-medium{
+    height: 400px;
+}
+.chart-container-large{
     height: 600px;
 }
 
+#loadingScreen {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8); /* Transparente */
+    z-index: 9999; /* Asegura que esté sobre otros elementos */
+    font-size: 1.5rem;
+    color: #333; /* Cambia el color del texto si es necesario */
+}
+
+/* START: Chart.js styles */
 .grid {
     font-size: 14px;
 }
@@ -53,6 +67,8 @@ body {
     padding: 5px 15px;
 }
 
+
+
 .grid .gridjs-footer {
     background-color: var(--COLOR-PRIMARY);
     border-radius: 0 0 var(--BORDER-RADIUS) var(--BORDER-RADIUS);
@@ -65,3 +81,4 @@ body {
 .grid input.gridjs-input {
     background-color: var(--COLOR-PRIMARY);
 }
+/* END: Chart.js styles */
