Se añade botón refresh

--- a/views/home.html
+++ b/views/home.html
@@ -47,10 +47,12 @@
         <p>Bienvenido a la página principal. Haz clic en los botones de navegación para ver más contenido.</p>
     </div>
 
-    <script>
-        
-
-
-    </script>
+    <div class="refresh">
+        <i id="btnRefresh" class="fas fa-sync-alt"></i>
+    </div>
+    <div id=loading class="loading">
+        <div class="spinner"></div>
+        <h4>Cargando</h4>
+    </div>
 </body>
 </html>
