--- a/views/theme.css
+++ b/views/theme.css
@@ -4,5 +4,6 @@
     --COLOR-ACCENT: #123458;
     --COLOR-ACCENT-DARK: #030303;
     --COLOR-SEPARATOR: #d8d7d4;
+    --COLOR-TRANSPARENT: rgba(255, 255, 255, 0.8);
     --BORDER-RADIUS: 4px;
 }
