Se hacen arreglos y mejoras estéticas

--- a/views/home.html
+++ b/views/home.html
@@ -58,50 +58,50 @@
     <div id="filterSection" class="container-fluid bg-light p-3 d-none">
         <div class="row g-3">
             <!-- Fecha Desde -->
-            <div class="col-6 col-lg-3">
+            <div class="col-6 col-md-3 col-xl-2 mb-3">
                 <label for="dateFrom" class="form-label">Fecha Desde</label>
-                <input type="month" class="form-control" id="dateFrom">
+                <input type="month" class="datefilter form-control" id="dateFrom">
             </div>
     
             <!-- Fecha Hasta -->
-            <div class="col-6 col-lg-3 mb-3">
+            <div class="col-6 col-md-3 col-xl-2 mb-3">
                 <label for="dateTo" class="form-label">Fecha Hasta</label>
-                <input type="month" class="form-control" id="dateTo">
+                <input type="month" class="datefilter form-control" id="dateTo">
             </div>
         </div>
         <div class="row g-3">
             <!-- Marcas -->
-            <div class="col-12 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-12 col-md-6 col-xl-4">
                 <select id="brands" multiple>
                 </select>
             </div>
 
             <!-- Modelos -->
-            <div class="col-12 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-12 col-md-6 col-xl-4">
                 <select id="models" multiple>
                 </select>
             </div>
 
             <!-- Tipos de Motor -->
-            <div class="col-12 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-12 col-md-6 col-xl-4">
                 <select id="motorTypes" multiple>
                 </select>
             </div>
 
             <!-- Tipos de Vehículos -->
-            <div class="col-12 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-12 col-md-6 col-xl-4">
                 <select id="vehicleTypes" multiple>
                 </select>
             </div>
 
             <!-- Comunidades autónomas -->
-            <div class="col-12 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-12 col-md-6 col-xl-4">
                 <select id="communities" multiple>
                 </select>
             </div>
 
             <!-- Provincias -->
-            <div class="col-12 col-md-6 col-lg-4 col-xl-2">
+            <div class="col-12 col-md-6 col-xl-4">
                 <select id="provinces" multiple>
                 </select>
             </div>
