--- a/views/annuals.html
+++ b/views/annuals.html
@@ -13,7 +13,7 @@
         <h3 class="text-center">Comparaciones anuales</h3>
         
         <div class="row mt-2">
-            <div class="col-12 col-lg-12 text-center">
+            <div class="col-12 col-lg-6 text-center">
                 <div class="tarjet">
                     <h5>Matriculaciones por Año</h5>
                     <div class="chart-container-medium">
@@ -21,12 +21,41 @@
                     </div>
                 </div>
             </div>
+
+            <div class="col-12 col-lg-6 text-center">
+                <div class="tarjet">
+                    <h5>Matriculaciones por Año (Acumuladas)</h5>
+                    <div class="chart-container-medium">
+                        <canvas id="annualsacc"></canvas>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-6 text-center">
+                <div class="tarjet">
+                    <h5>Diferenciales por Año anterior</h5>
+                    <div class="chart-container-small">
+                        <canvas id="annualsdiff"></canvas>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-6 text-center">
+                <div class="tarjet">
+                    <h5>Diferenciales por Año anterior (Acumuladas)</h5>
+                    <div class="chart-container-small">
+                        <canvas id="annualsaccdiff"></canvas>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-12">
                 <div class="grid">
                     <div id="annualsResults"></div>
                 </div>
             </div>
         </div>
+        
     </div>
 </body>
 </html>
