--- a/views/home.html
+++ b/views/home.html
@@ -90,7 +90,7 @@
 
             <!-- Tipos de Vehículos -->
             <div class="col-12 col-md-6 col-xl-4">
-                <select id="vehicleTypes" multiple>
+                <select id="serviceTypes" multiple>
                 </select>
             </div>
 
