Se crea la pantalla de Propulsión y se añaden nuevos colores.

--- a/views/theme.css
+++ b/views/theme.css
@@ -6,4 +6,13 @@
     --COLOR-SEPARATOR: #d8d7d4;
     --COLOR-TRANSPARENT: rgba(255, 255, 255, 0.8);
     --BORDER-RADIUS: 4px;
+
+    --COLOR-TYPE-1: #123458;
+    --COLOR-TYPE-2: #68363B;
+    --COLOR-TYPE-3: #3B5D50;
+    --COLOR-TYPE-4: #A08A53;
+    --COLOR-TYPE-5: #5D486E;
+    --COLOR-TYPE-6: #8C5B3B;
+    --COLOR-TYPE-7: #2D5D74;
+    --COLOR-TYPE-8: #886B74;
 }
