se añade la pantalla de tipos de motor

--- a/views/propulsion.html
+++ b/views/propulsion.html
@@ -12,7 +12,7 @@
 
 </body>
     <div>
-        <h3 class="text-center">Tipos de propulsión</h3>
+        <h3 class="text-center">Matriculaciones por tipos de motor</h3>
         
         <div class="row mt-2">
             <div class="col-12 col-lg-6 text-center">
@@ -27,7 +27,7 @@
                 <div class="tarjet">
                     <h5>Acumulado de matriculaciones (%)</h5>
                     <div class="chart-container-medium">
-                        <canvas id="motorTypes100Acc"></canvas>
+                        <canvas id="motorTypesAcc100"></canvas>
                     </div>
                 </div>
             </div>
