--- a/views/home.html
+++ b/views/home.html
@@ -45,7 +45,7 @@
                             <a class="nav-link" href="#" onclick="loadPage('annuals.html', 'annuals.js')">Anuales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" onclick="loadPage('propulsion.html','propulsion.js')">Propulsión</a>
+                            <a class="nav-link" href="#" onclick="loadPage('propulsion.html','propulsion.js')">Tipos de motor</a>
                         </li>
                     </ul>
                     <!-- Contenedor para posicionar correctamente el icono de filtros -->
