--- a/views/styles.css
+++ b/views/styles.css
@@ -17,14 +17,20 @@ body {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
-.chart-container-small{
+.chart-container-small {
     height: 200px;
+    display: flex;
+    justify-content: center;
 }
-.chart-container-medium{
+.chart-container-medium {
     height: 400px;
+    display: flex;
+    justify-content: center;
 }
-.chart-container-large{
+.chart-container-large {
     height: 600px;
+    display: flex;
+    justify-content: center;
 }
 
 .loading {
