--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,21 @@ body {
     color: var(--COLOR-ACCENT_DARK);
 }
 
+.loadingFilter {
+    display: flex;
+    flex-direction: column; /* Esto coloca los elementos en columna */
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    font-size: 1.5rem;
+    color: var(--COLOR-ACCENT_DARK);
+}
+
 @keyframes shine {
     0% { background-position: -200% 0; filter: brightness(0.8); }
     50% { filter: brightness(1.2); }
