--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,24 @@ body {
 
 }
 
+@media (min-width: 768px) {
+  #sectionFilterDesktop {
+    display: flex; /* será flex en desktop */
+  }
+}
+
+@media (min-width: 768px) {
+  #sectionFilterDesktop {
+    display: flex; /* se muestra como flex en desktop */
+  }
+}
+/* Oculto en móvil por defecto */
+@media (max-width: 767.98px) {
+  #sectionFilterDesktop {
+    display: none;
+  }
+}
+
 .headerSection {
     background-color: var(--COLOR-ACCENT);
 }
