--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 body {
-    font-family: "Quicksand", sans-serif;
+    font-family: var(--FONT-FAMILY);
+    font-size: var(--FONT-SIZE-MD);
     color: var(--COLOR-ACCENT-DARK);
     background-color: var(--COLOR-SECONDARY);
     margin: 0;
@@ -33,6 +34,7 @@ body {
 
 .headerSection {
     background-color: var(--COLOR-ACCENT);
+    --bs-navbar-padding-y: 0rem;
 }
 
 .headerSection .navbar-brand {
@@ -67,7 +69,7 @@ body {
 .tarjet{
     background-color: var(--COLOR-PRIMARY);
     border-radius: var(--BORDER-RADIUS);
-    padding: 20px;
+    padding: 10px;
     margin-bottom: 10px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
@@ -100,7 +102,6 @@ body {
     height: 100%;
     background-color: var(--COLOR-TRANSPARENT); /* Transparente */
     z-index: 9999;
-    font-size: 1.5rem;
     color: var(--COLOR-ACCENT_DARK);
 }
 
@@ -115,7 +116,6 @@ body {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    font-size: 1.5rem;
     color: var(--COLOR-ACCENT_DARK);
 }
 
@@ -139,20 +139,7 @@ body {
     animation: shine 2s linear infinite;
 }
 
-.refresh {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    font-size: 1rem;
-    color: var(--COLOR-PRIMARY);;
-    cursor: pointer;
-}
-
 /* START: Chart.js styles */
-.grid {
-    font-size: 14px;
-}
-
 .grid .gridjs-container {
     padding: 0px;
 }
@@ -172,8 +159,6 @@ body {
     border: 1px solid var(--COLOR-SEPARATOR);
     padding: 5px 15px;
 }
-
-
 
 .grid .gridjs-footer {
     background-color: var(--COLOR-PRIMARY);
@@ -202,7 +187,6 @@ body {
     vertical-align: middle;
     border-radius: var(--BORDER-RADIUS);
     padding: 4px 10px;
-    font-size: 12px;
     font-weight: 500;
     margin-right: 3.75px;
     margin-bottom: 3.75px;
