--- a/styles/theme.css
+++ b/styles/theme.css
@@ -17,4 +17,6 @@
     --COLOR-TYPE-7: #A05F2C;     /*  Marrón  tostado, cálido  y  con carácter  */
     --COLOR-TYPE-8: #4C4C4C;     /*  Gris  oscuro para  categorías  neutras o  sin  destacar */
 
+    --FONT-FAMILY: "Quicksand", sans-serif;
+    --FONT-SIZE-MD: 14px;
 }
