--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,21 +177,34 @@ body {
 /* END: Chart.js styles */
 
 /* */
+
+.choices {
+    font-size: var(--FONT-SIZE-SM);
+}
+
+.choices .choices__input {
+    font-size: var(--FONT-SIZE-MD);
+    margin: 0px;
+    min-height: 0px;
+}
+
 .choices .choices__inner {
     background-color: transparent;
-    padding: 7.5px 7.5px 3.75px;
+    padding: 0.5px;
     border: 1px solid var(--COLOR-SEPARATOR);
     border-radius: var(--BORDER-RADIUS);
+    min-height: 35px;
+
 }
 
 .choices__list--multiple .choices__item {
     display: inline-block;
     vertical-align: middle;
     border-radius: var(--BORDER-RADIUS);
-    padding: 4px 10px;
+    padding: 4px 4px;
     font-weight: 500;
-    margin-right: 3.75px;
-    margin-bottom: 3.75px;
+    margin-right: 3px;
+    margin-bottom: 3px;
     background-color: var(--COLOR-ACCENT);
     border: 1px solid var(--COLOR-ACCENT-DARK);
     color: var(--COLOR-PRIMARY);
