--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,8 +56,13 @@ body {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
 
+.chart-container-xsmall {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+}
 .chart-container-small {
-    height: 200px;
+    height: 250px;
     display: flex;
     justify-content: center;
 }
